Implemented support for mo files. Movie logic for parsing po files to PoParser class.

--- a/bower.json
+++ b/bower.json
@@ -18,6 +18,7 @@
     "tests"
   ],
   "dependencies": {
-    "sprintf.js": "jakobwesthoff/sprintf.js"
+    "sprintf.js": "jakobwesthoff/sprintf.js",
+    "jdataview": "^2.5.0"
   }
 }
