--- a/package.json
+++ b/package.json
@@ -4,10 +4,9 @@
   "description": "A simple and lightweight GNU gettext implementation for JavaScript.",
   "main": "dist/gettext.js",
   "devDependencies": {
-    "gulp": "^3.9.1",
-    "gulp-bower": "0.0.13",
-    "gulp-concat": "^2.6.0",
-    "gulp-uglify": "^1.5.3"
+    "grunt": "^0.4.5",
+    "grunt-browserify": "^4.0.1",
+    "grunt-contrib-uglify": "^0.11.1"
   },
   "repository": {
     "type": "git",
@@ -18,5 +17,9 @@
   "bugs": {
     "url": "https://github.com/soldag/gettext.js/issues"
   },
-  "homepage": "https://github.com/soldag/gettext.js#readme"
+  "homepage": "https://github.com/soldag/gettext.js#readme",
+  "dependencies": {
+    "jdataview": "^2.5.0",
+    "sprintf-js": "^1.0.3"
+  }
 }
