--- a/package.json
+++ b/package.json
@@ -10,10 +10,18 @@
     "i18n"
   ],
   "main": "dist/j29n.js",
+  "scripts": {
+    "test": "istanbul cover test/runner.js && istanbul report html"
+  },
   "devDependencies": {
     "grunt": "^0.4.5",
     "grunt-browserify": "^4.0.1",
-    "grunt-contrib-uglify": "^1.0.0"
+    "grunt-contrib-uglify": "^1.0.0",
+    "istanbul": "^0.4.2",
+    "jasmine": "^2.4.1",
+    "jasmine-ajax": "^3.2.0",
+    "proxyquire": "^1.7.4",
+    "xmlhttprequest": "^1.8.0"
   },
   "repository": {
     "type": "git",
