--- a/package.json
+++ b/package.json
@@ -11,9 +11,10 @@
   ],
   "main": "dist/j29n.js",
   "scripts": {
-    "test": "istanbul cover test/runner.js && istanbul report html"
+    "test": "istanbul cover test/runner.js"
   },
   "devDependencies": {
+    "codecov": "^1.0.1",
     "grunt": "^0.4.5",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-uglify": "^1.0.0",
