--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,10 @@
 language: node_js
 node_js:
-- '5'
-- '4'
+  - '5'
+  - '4'
 script: npm test && ./node_modules/.bin/codecov
+after_script:
+  - codeclimate-test-reporter < ./coverage/lcov.info
 before_deploy: npm install -g grunt-cli && grunt
 deploy:
   provider: releases
