--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,7 @@ node_js:
   - '4'
 script: npm test && ./node_modules/.bin/codecov
 after_script:
+  - npm install -g codeclimate-test-reporter
   - codeclimate-test-reporter < ./coverage/lcov.info
 before_deploy: npm install -g grunt-cli && grunt
 deploy:
