Include dist folder in npm package to let users use j29n in npm for web projects.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "internationalization",
     "i18n"
   ],
-  "main": "src/main.js",
+  "main": "index.js",
   "scripts": {
     "test": "istanbul cover test/runner.js"
   },
