--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt": "^1.0.1",
     "grunt-browserify": "^5.0.0",
     "grunt-contrib-uglify": "^1.0.1",
+    "grunt-release": "^0.14.0",
     "istanbul": "^0.4.3",
     "jasmine": "^2.4.1",
     "jasmine-ajax": "^3.2.0",
